feat: add folders basic routes
